k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: az-service
  namespace: default
spec:
  selector:
    app: phpmyadmin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
