k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - hosts:
    - azimuth.tk
    secretName: tls-secret
  defaultBackend:
    service:
      name: az-service
      port:
        number: 80
